# sketchring---Project-in-Parallel-Distributed-Programming

./: A developer's guide.docx  CMakeLists.txt  Presentation.pptx  README.txt  UF.h  io.cpp  run.py  scketchRing.h  test.h  test_generator.cpp  test_generator.h
Tests/: test_generator1.txt  test_generator10.txt  test_generator10_out.txt  test_generator11.txt  test_generator11_out.txt  test_generator12.txt  test_generator12_out.txt  test_generator15.txt  test_generator15_out.txt  test_generator1_out.txt  test_generator2.txt  test_generator20.txt  test_generator20_out.txt  test_generator21.txt  test_generator21_out.txt  test_generator22.txt  test_generator22_out.txt  test_generator3_out.txt  test_generator4.txt  test_generator4_out.txt  test_generator5.txt  test_generator5_out.txt  test_generator6.txt  test_generator6_out.txt  test_generator7.txt  test_generator7_out.txt  test_generator8.txt  test_generator8_out.txt  test_generator9.txt  test_generator9_out.txt
countmin/: countmin.cpp  countmin.h
xxhash/: LICENSE  readme.md
